--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
-    <title>Modal Cards - Free Bulma template</title>
+    <title>Polirithm</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.9.4-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="../css/hero.css">
     <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" /> 
     <style>
     .columns:nth-child(2)
     {margin-top: -10rem;}
@@ -22,14 +23,18 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <p class="title">
-            Modal Cards
+            <!-- TEST JQeury here to add "polirith"-->
+            <!-- TEST CSS here to bold-->
           </p>
           <p class="subtitle">
-            Subtitle
+            <img src="./assets/images/polirithm_logo.png" alt="polirithm logo.">
           </p>
         </div>
       </div>
     </section>
+    <nav>
+      <!-- nav here if needed -->
+    </nav>
     <div class="box cta">
       <p class="has-text-centered">
         <span class="tag is-primary">New</span> Here we have modal cards. When you click on them they will open functional modal examples.
@@ -358,10 +363,12 @@
       </div>
       <button class="modal-close is-large" aria-label="close"></button>
     </div>
+    <footer>© 2023</footer>
     <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
   integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE="
   crossorigin="anonymous"></script>    <script src="../js/wild.js"></script>
+  <script src="./assets/JS/script.js"></script> 
   </body>
 </html>
