--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <!-- Add your navigation links here -->
+                    <!-- navigation links -->
                     <a class="navbar-item" href="#">
                         Home
                     </a>
@@ -36,7 +36,7 @@
                     <a class="navbar-item" href="#">
                         Services
                     </a>
-                    <!-- Add more links as needed -->
+                    <!-- Add links as needed -->
                 </div>
             </div>
         </nav>
