--- a/index.html
+++ b/index.html
@@ -22,40 +22,22 @@
 <main>
   <section>
 <navbar></navbar>
-  Hello World
 <div class="container">
-<div class="card">
+<div class="card"></div> 
+</div> 
 
-  <!--
-  card-header: a horizontal bar with a shadow
-card-header-title: a left-aligned bold text
-card-header-icon: a placeholder for an icon
-card-image: a fullwidth container for a responsive image
-card-content: a multi-purpose container for any other element
-card-footer: a horizontal list of controls
-card-footer-item: a repeatable list item
-  -->
+
  
-</div><!-- end card -->
-</div> <!-- end container -->
+
 </section>
 </main>
-
-
-
-
-
-    <!----------------------------------------------------->
-
-    <footer class="footer">
-      <div class="content has-text-centered">
-        <p>
-          @2023
-        </p>
-      </div>
-    </footer>
-    <!-- Bulma script class for modal functionality -->
-    <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        @2023
+      </p>
+    </div>
+  </footer>
    <!-- Added link to the jQuery library -->
    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
