--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Polirithm</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.9.4-->
+    <link rel="stylesheet" href="assets/CSS/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="assets/CSS/style.css" />
 </head>
 <body>
 
@@ -25,7 +26,7 @@
             </div>
 
             <div class="navbar-menu">
-                <div class="navbar-start">
+                <div class="container is-widescreen navbar-start">
                     <!-- navigation links -->
                     <a class="navbar-item" href="#">
                         Home
@@ -43,8 +44,12 @@
     </header>
 
     <main>
-        <section>
-            Hello World
+        <section id="content-box" class="container is-desktop">
+          <div class="columns is-centered">
+            <div class="column">
+              First column
+
+            </div>
     </main>
 
 
