--- a/index.html
+++ b/index.html
@@ -89,23 +89,24 @@
           </div>
         </section>
 
-      <div class="modal">
-        <div class="modal-background"></div>
-        <div class="modal-card">
-          <header class="modal-card-head">
-            <p class="modal-card-title">Modal title</p>
-            <button class="delete" aria-label="close"></button>
-          </header>
-          <section class="modal-card-body">
-            <!-- Content ... -->
-          </section>
-          <footer class="modal-card-foot">
-            <button class="button is-success">Save changes</button>
-            <button class="button">Cancel</button>
-          </footer>
+        <div class="modal is-active" id="modal-js-example">
+          <div class="modal-background"></div>
+          <div class="modal-card">
+            <header class="modal-card-head">
+              <p class="modal-card-title">Modal title</p>
+            </header>
+            <section class="modal-card-body">
+              <!-- Content ... -->
+            </section>
+            <footer class="modal-card-foot">
+              <button class="button is-success is-center">Login</button>
+            </footer>
+          </div>
         </div>
-      </div>
-
+      
+        <button class="js-modal-trigger" data-target="modal-js-example">
+          Open JS example modal
+        </button>>
 
 
 
@@ -126,7 +127,7 @@
     <!-- Bulma script class for modal functionality -->
     <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
     <!-- Added link to the jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <!-- KEEP - UNCOMMENT FOR SPOTIFY API LOGIN -->
     <!-- <script type="module" src="./assets/JS/oauth-live.js"></script> -->
