add modal for login prompt

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
           <div class="modal-background"></div>
           <div class="modal-card">
             <header class="modal-card-head">
-              <p class="modal-card-title">Modal title</p>
+              <img class="modal-card-title" src="assets/images/polirithm_logo.png" alt="logo version of Polirithm">
             </header>
             <section class="modal-card-body">
-              <!-- Content ... -->
+              <div class="box">
+                <p class="content"> Welcome to Polirithm!</p>
+                <p class="content"> To continue, you need to login to Spotify by clicking the button below.</p>
+              </div>
             </section>
             <footer class="modal-card-foot">
-              <button class="button is-success is-center">Login</button>
+              <button class="button is-large" onclick="loadScript('assets/JS/oauth-test.js')">Login to Spotify</button>
             </footer>
           </div>
         </div>
       
-        <button class="js-modal-trigger" data-target="modal-js-example">
-          Open JS example modal
-        </button>>
-
+        
 
 
 
