changed redirect uris to live site instead of testing page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </div>
             </section>
             <footer class="modal-card-foot">
-              <button class="button is-large" onclick="loadScript('assets/JS/oauth-test.js')">Login to Spotify</button>
+              <button class="button is-large" onclick="loadScript('assets/JS/oauth-live.js')">Login to Spotify</button>
             </footer>
           </div>
         </div>
