--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       
       <section  class="section container is-fluid">
         <h1 class="title wlecome is-underlined is-large">Welcome:</h1>
-        <h2 class="title is-2 is-bold" id="displayName"></h2>
+        <h2 class="title is-1 is-bold" id="displayName"></h2>
+        <h2 class="title">Here's some stats about your listing history!</h2>
       </section>
       <section class="section is-medium" > 
           
