--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,27 +11,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="assets/CSS/style.css" />
 </head>
+
 <body>
   <!-- Header with Logo and Navbar -->
-  <header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+  <header id="home">
+    <a href="./index.html">
+      <!-- Your Logo -->
+      <img src="./assets/images/polirithm_logo.png" alt="Polirithm Logo">
+    </a>
+    <nav class="navbar" role="navigation" aria-label="main navigation" >
       <div class="navbar-brand">
-        <a class="navbar-item" href="#">
-          <!-- Your Logo -->
-          <img src="./assets/images/polirithm_logo.png" alt="Polirithm Logo" width="112" height="28">
-        </a>
       </div>
       <div class="navbar-menu">
-        <div class="container navbar-start">
+        <div class="navbar-start" >
           <!-- navigation links -->
-          <a class="navbar-item" href="#">
+          <a class="navbar-item is-underlined" href="#home">
             Home
           </a>
-          <a class="navbar-item" href="#">
-            About
-          </a>
-          <a class="navbar-item" href="#">
-            Services
+          <a class="navbar-item is-underlined" href="#about">
+            About Us
           </a>
         </div>
       </div>
@@ -38,11 +37,11 @@
   </header>
   <main>
     <section class="section container is-fluid">
-      <h1 class="title wlecome is-underlined is-large">Welcome:</h1>
+      <h1 class="title wlecome is-large">Welcome!</h1>
       <h2 class="title is-1 is-bold" id="displayName"></h2>
-      <h2 class="title">Here's some stats about your listing history!</h2>
+      <h2 class="title">Here are some stats about your listing history.</h2>
     </section>
-    <section class="section is-medium">
+    <section class="section is-small">
       <div class="box" id="shadow-box">
         <div class="box is-large container" id="main-content">
           <div class="tabs is-boxed is-medium" id="tabs">
@@ -54,11 +53,11 @@
           <div class="box is-large container" id="main-content">
             <div class="columns" id="content-cols">
               <div class="column">
-                <h2 class="title is-4">Spotify</h2>
+                <h2 class="title is-4">My Top 10 Spotify</h2>
                 <!-- Content card for track data -->
                 <div class="tab-content active" id="artist-data">
                   <div class="box">
-                    <h3 class="title is-10 is-underlined">Top Artists</h3>
+                    <h3 class="title is-10">Top Artists</h3>
                     <ul class="content list" id="top-artists-list">
                       <!-- Add your artist content here -->
                     </ul>
@@ -67,7 +66,7 @@
                 <!-- Content card for track data -->
                 <div class="tab-content" id="track-data">
                   <div class="box">
-                    <h3 class="title is-10 is-underlined">Top Tracks</h3>
+                    <h3 class="title is-10">Top Tracks</h3>
                     <ul class="content list" id="top-tracks-list">
                       <!-- Add your track content here -->
                     </ul>
@@ -76,7 +75,7 @@
               </div>
               <!-- Content for graph data -->
               <div class="column">
-                <h2 class="title is-4">Graph</h2>
+                <h2 class="title is-4">Popularity Across Spotify</h2>
                 <div class="box" id="graph-content">
                   <!-- graph data goes here -->
                 </div>
@@ -84,6 +83,22 @@
             </div>
           </div>
         </div>
+    </section>
+    <section class="section is-small">
+      <div class="box" id="shadow-box">
+        <div class="box is-large container" id="about">
+          <h2 class="title is-4" >About Us</h2>
+           <!-- Content card for track data -->
+           <div class="tab-content active" id="artist-data">
+            <div class="box">
+              About us here.
+              <ul class="content list" id="top-artists-list">
+                <!-- Add your artist content here -->
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <div class="modal is-active" id="modal">
       <div class="modal-background"></div>
@@ -104,11 +119,9 @@
     </div>
   </main>
   <!-- Footer -->
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p>
-        @2023
-      </p>
+  <footer>
+    <div class="has-text-centered">
+      <p id="currentYear"><!-- JavaScript pull current year --></p>
     </div>
   </footer>
   <!-- Bulma script class for modal functionality -->
@@ -116,56 +129,12 @@
   <!-- Added link to the jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <!-- SPOTIFY API LOGIN SCREEN -->
-  <script src="./assets/JS/script.js"></script>
-   <!-- NOT NEEDED HERE, Spotify JS now in script.JS >> <script type="module" src="./assets/JS/oauth-live.js"></script> -->
+  <!-- <script src="./assets/JS/script.js"></script> -->
+  <!-- NOT NEEDED HERE, Spotify JS now in script.JS >> <script type="module" src="./assets/JS/oauth-live.js"></script> -->
 
-<<<<<<< Updated upstream
   <!-- TEST -->
-  <!-- <script src="./assets/JS/chartTEST.js"></script> -->
- 
-=======
-        <div class="modal is-active" id="modal">
-          <div class="modal-background"></div>
-          <div class="modal-card">
-            <header class="modal-card-head">
-              <img class="modal-card-title" src="assets/images/polirithm_logo.png" alt="logo version of Polirithm">
-            </header>
-            <section class="modal-card-body">
-              <div class="box">
-                <p class="content"> Welcome to Polirithm!</p>
-                <p class="content"> To continue, you need to login to Spotify by clicking the button below.</p>
-              </div>
-            </section>
-            <footer class="modal-card-foot">
-              <button class="button is-large" onclick="loadScript('assets/JS/oauth-test.js')">Login to Spotify</button>
-            </footer>
-          </div>
-        </div>
-      
-        
-    </main>
+  <script src="./assets/JS/chartTEST.js"></script>
 
-
-    <!----------------------------------------------------->
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="content has-text-centered">
-            <p>
-                @2023
-            </p>
-        </div>
-    </footer>
-
-    <!-- Bulma script class for modal functionality -->
-    <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
-    <!-- Added link to the jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <!-- KEEP - UNCOMMENT FOR SPOTIFY API LOGIN -->
-    <!-- <script type="module" src="./assets/JS/oauth-live.js"></script> -->
-    <!-- <script  src="assets/JS/script.js"></script> -->
-    <script  src="assets/JS/chartTEST.js"></script>
-    <!-- <script type="module" src="assets/JS/oauth-test.js"></script> -->
->>>>>>> Stashed changes
 </body>
+
 </html>
