--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
   <!-- Added link to the jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <!-- SPOTIFY API LOGIN SCREEN -->
-  <!-- <script src="./assets/JS/script.js"></script> -->
-  <!-- NOT NEEDED HERE, Spotify JS now in script.JS >> <script type="module" src="./assets/JS/oauth-live.js"></script> -->
+  <script src="./assets/JS/script.js"></script>
+  <!-- Spotify JS NOT NEEDED HERE, is now in script.JS >> 
+    <script type="module" src="./assets/JS/oauth-live.js"></script> -->
 
   <!-- TEST -->
-  <script src="./assets/JS/chartTEST.js"></script>
+  <!-- <script src="./assets/JS/chartTEST.js"></script> -->
 
 </body>
 
