--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
     </a>
     <nav class="navbar" role="navigation" aria-label="main navigation" >
       <div class="navbar-brand">
-      </div>
-      <div class="navbar-menu">
+     
+     <!-- <div class="navbar-menu"> -->
         <div class="navbar-start" >
           <!-- navigation links -->
-          <a class="navbar-item is-underlined" href="#home">
-            Home
+          <a class="navbar-item is-underlined" href="#spotify">
+            Top Artists & Tracks
           </a>
           <a class="navbar-item is-underlined" href="#about">
             About Us
           </a>
         </div>
-      </div>
+     <!-- </div>-->
+         </div>
     </nav>
   </header>
   <main>
@@ -41,7 +42,7 @@
       <h2 class="title is-1 is-bold" id="displayName"></h2>
       <h2 class="title">Here are some stats about your listing history.</h2>
     </section>
-    <section class="section is-small">
+    <section class="section is-small" id="spotify">
       <div class="box" id="shadow-box">
         <div class="box is-large container" id="main-content">
           <div class="tabs is-boxed is-medium" id="tabs">
@@ -107,9 +108,19 @@
            <!-- Content card for track data -->
            <div class="tab-content active" id="artist-data">
             <div class="box">
-              About us here.
-              <ul class="content list" id="top-artists-list">
-                <!-- Add  artist content here -->
+              <h3 class="title is-10">The Polirithms</h3>
+              <h4>Polyrhythm:</h4>
+              <p>
+                a rhythm which makes use of two or more different rhythms simultaneously.<br />
+                ex: "traditional African music is celebrated for its complex polyrhythms"
+              </p>
+              <br />
+              <h4>Members:</h4>
+              <ul>
+                <li>Chris D Brown</li>
+                <li>Melissa Brown</li>
+                </li>Javier Reza</li>
+                </li>Jeff Scott</li>
               </ul>
             </div>
           </div>
