styles to footer and modal

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
   <!-- Footer -->
   <footer>
     <div class="has-text-centered">
-      <p id="currentYear"><!-- JavaScript pull current year --></p>
+      Data provided by <strong>Spotify</strong> 
+      <!-- <p id="currentYear">JavaScript pull current year</p> -->
     </div>
   </footer>
   <!-- Bulma script class for modal functionality -->
