--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="box is-large container" id="about">
           <h2 class="title is-4" >About Us</h2>
            <!-- Content card for track data -->
-           <div class="tab-content active" id="artist-data">
+           <div class="tab-content active">
             <div class="box">
               <h3 class="title is-10">The Polirithms</h3>
               <h4>Polyrhythm:</h4>
@@ -159,9 +159,6 @@
   <script src="./assets/JS/script.js"></script>
   <!-- Spotify JS NOT NEEDED HERE, is now in script.JS >> 
     <script type="module" src="./assets/JS/oauth-live.js"></script> -->
-
-  <!-- TEST -->
-  <!-- <script src="./assets/JS/chartTEST.js"></script> -->
 
 </body>
 
